re-did phase 1 and got 100% working

--- a/Phase 1/SimplyBlogging/aboutUs.html
+++ b/Phase 1/SimplyBlogging/aboutUs.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <a href="MainPage.html">back</a>
+    <title>About Us:</title>
 </head>
 <body>
-    <h1>About Us</h1>
-    <p></p>
+    <h1 style="text-align: center; color: pink;">About Us</h1>
+    <p style="text-align: center; color: salmon;">Hello and thank you for visiting our website we log blogs in a neat format and 
+        thank you for using our services today we have been around since 2019 and founded
+        by Jonah Valdez and hope to continue to serve our valued customers such as yourself
+        thank you again and if you want to return to the main page please just click the back 
+        button.
+    </p>
 </body>
 </html>
